@@ -1,0 +1,10 @@
+<html>
+<body>
+<p>This page contains links of interest for future development. Add links at
+your discretion</p>
+<p>
+<a href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">Garbage collection for C and C++</a>
+<!-- HERE -->
+</p>
+</body>
+</html>
