@@ -1,4 +1,8 @@
-2003-123	blytkerchan
+2003-10-30	blytkerchan
+	* links.html: new file
+	* 00-index: update
+
+2003-10-23	blytkerchan
 	* lock-free_lists.pdf: new file
 	* 00-index: updated
 
